Add preset image generation to image grid login.